styling the jumbotron ..need to fix spacing

--- a/public/css/header.css
+++ b/public/css/header.css
@@ -1,11 +1,29 @@
 #rutgers-banner {
-  
   font-family: 'Kaushan Script', cursive;
-  /*font-weight: 24;*/
-  /*
-  
-  Put font link inside of banner
+  font-weight: large;
+  color: white;
+}
 
-  */
-  /*<link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>*/
+.jumbotron {
+  position: relative;
+  padding-top: 15px;
+  /*padding-bottom: 0;*/
+  /*margin: 0 auto;*/
+  background-image: url("/pictures/redbanner-gradiant.png");
+
+  height: 175px;
+}
+
+.jumbtron > img {
+  width: 100%;
+  
+}
+
+#rutgers-banner > h2 {
+  font-size: 100px;
+  text-align: center;
+  margin-top: 0 auto;
+  margin-bottom: 0 auto;
+  margin: 0 auto;
+  /*padding-bottom: 10px;*/
 }
