--- a/public/css/master.css
+++ b/public/css/master.css
@@ -126,7 +126,7 @@ header {
 }
 
 section {
-  color: #ffffff;
+  color: black;
   min-height: 400px;
   height: auto !important;
   height: 100%;
